ta.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: ta
    run: ta
  name: ta
  namespace: team-a
spec:
  containers:
  - image: joshrosso/nginx-curl:v2
    name: ta
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ta
    run: ta
  name: ta
  namespace: team-a
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ta
    run: ta
status:
  loadBalancer: {}
