tb.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: tb
    run: tb
  name: tb
  namespace: team-b
spec:
  containers:
  - image: joshrosso/nginx-curl:v2
    name: ta
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tb
    run: tb
  name: tb
  namespace: team-b
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tb
    run: tb
status:
  loadBalancer: {}
